--- a/pom.xml
+++ b/pom.xml
@@ -52,14 +52,13 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.2</version>
         </dependency>
-
-
-
         <dependency>
-            <groupId>jakarta.activation</groupId>
-            <artifactId>jakarta.activation-api</artifactId>
-            <version>2.1.0</version>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
+            <version>4.0.1</version>
         </dependency>
+
+
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
